@@ -6,10 +6,13 @@ loglevel = 4
    height = 480
    bitdepth = 32
    fullscreen = false
+# }
+
+# ui {
    font = "slicker.ttf"
    title_height = 40  # height of title font
    list_height  = 30  # height of list entry font
-   pagesize = 15      # number of list entries per page
+   pagesize = 15      # number of list items to skip in pageup/down
 # }
 
 # mame {
